--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,22 +26,12 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-
 					<td>
-					<% if book.favorited_by?(current_user) %>
-					
-					<%= link_to book_favorites_path(book), method: :delete do %>
-					<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
-					<%= book.favorites.count %>
-					<% end %>
-
-					<% else %>
-                    
-					<%= link_to book_favorites_path(book), method: :post do %>
-					<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-					<%= book.favorites.count %>
-					<% end %>
-                    <% end %>	
+					<!-- 非同期通信追加-->					
+					<div id="favorites_buttons_<%= book.id %>">
+						<%= render partial: 'favorites/favorite', locals: { book: book} %>
+					</div>
+                   <!--非同期通信追加-->
 					</td>
 					<td><%= link_to "コメント数：#{book.book_comments.count}", book_path(book.id) %></td>
 				</tr>
