--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,29 +17,21 @@
 					<td><%= @book.body %></td>
 
 					<td>
-					<% if @book.favorited_by?(current_user) %>
-					
-					<%= link_to book_favorites_path(@book), method: :delete do %>
-					<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
-					<%= @book.favorites.count %>
-					<% end %>
-
-					<% else %>
-                    
-					<%= link_to book_favorites_path(@book), method: :post do %>
-					<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-					<%= @book.favorites.count %>
-					<% end %>
-                    <% end %>
+					<!-- 非同期通信追加-->					
+					<div id="favorites_buttons_<%= @book.id %>">
+						<%= render partial: 'favorites/favorite', locals: { book: @book} %>
+					</div>
+          <!--非同期通信追加-->
 					</td>
-
 
 					<td>コメント数：<%= @book.book_comments.count %></td>
 
 					<% if @book.user_id == current_user.id %>
 
 					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
+						
+					</td>
 				</tr>
 			  <% end %>
 			  
