--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,20 +26,22 @@
 			<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
 			<td><%= book.body %></td>
 			<td>
+				<!-- 追加(部分的に更新したい場所) -->
 				<% if book.favorited_by?(current_user) %>
 					
-					<%= link_to book_favorites_path(book), method: :delete do %>
+					<%= link_to book_favorites_path(book), method: :delete, remote: true do %>
 					<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
 					<%= book.favorites.count %>
 					<% end %>
 
 					<% else %>
                     
-					<%= link_to book_favorites_path(book), method: :post do %>
+					<%= link_to book_favorites_path(book), method: :post , remote: true do %>
 					<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
 					<%= book.favorites.count %>
 					<% end %>
                     <% end %>
+                  
 			</td>
 		    <td><%= link_to "コメント数：#{book.book_comments.count}", book_path(book.id) %></td>
 		</tr>
