--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,28 +18,14 @@
 
 			<tbody>
 				<% @books.each do |book| %>
-				<tr>
-					<td>
-						<%= link_to user_path(book.user.id) do %>
-						<%= attachment_image_tag book.user, :profile_image, format:'lpeg', size:"50x50", fallback: "no-image-mini.jpg" %>
-						<% end %>
-					</td>
-					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
-					<td><%= book.body %></td>
-					<td>
 					<!-- 非同期通信追加-->					
-					<div id="favorites_buttons_<%= book.id %>">
+					<tr class="favorites_buttons_<%= book.id %>">
 						<%= render partial: 'favorites/favorite', locals: { book: book} %>
-					</div>
-                   <!--非同期通信追加-->
-					</td>
-					<td><%= link_to "コメント数：#{book.book_comments.count}", book_path(book.id) %></td>
-				</tr>
+					</tr>
+                   <!--非同期通信追加-->				
 				<% end %>
 			</tbody>
 		</table>
-
-		<!--books一覧 -->
 	</div>
   </div>
 </div>
