--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,58 +7,23 @@
 
 		<table class="table">
 				<tr>
-					<td>
-						<%= link_to (@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, size:"50x50", fallback: "no-image-mini.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, @book %></td>
-					<td><%= @book.body %></td>
-
-					<td>
 					<!-- 非同期通信追加-->					
-					<div id="favorites_buttons_<%= @book.id %>">
-						<%= render partial: 'favorites/favorite', locals: { book: @book} %>
-					</div>
-          <!--非同期通信追加-->
-					</td>
-
-					<td>コメント数：<%= @book.book_comments.count %></td>
-
-					<% if @book.user_id == current_user.id %>
-
-					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
-						
-					</td>
-				</tr>
-			  <% end %>
+					<tr class="favorites_buttons_<%= @book.id %>">
+						<%= render partial: 'favorites/favorite2', locals: { book: @book} %>
+					</tr>
 			  
 			</table>
 
-			<% @book.book_comments.each do |book_comment| %>
-			<div class="comment-text">
-			<%= book_comment.comment %>
-		    </div>
-			
-			<% if user_signed_in? && book_comment.user_id == current_user.id %>
-			<%= link_to 'Destroy', book_book_comments_path(book_comment.id), method: :delete %>
-			<% end %>
-			<% end %>
+       
+       <%= render 'book_comments/comments_area', book_comments: @book_comments %>
 		
-
-			<!-- form_for -->
-				 <%= form_for [@book, @book_comment] do |f| %>
-				  <div class="row">
-				  	<div class="col-xs-10">
-				  	  <%= f.text_area :comment,rows:'5', class:"form-control",placeholder:"コメントをここに" %>
-				  	</div>
-				  </div>
-				  <%= f.submit "送信する" %>
-				  <% end %>
-                <!-- form_for -->
-
+        <!-- form_for -->
+        <%= form_with(model: [@book, @book_comment], remote: true) do |f| %>
+        <%= f.label :comment %>
+        <%= f.text_area :comment, id: "book_comment_comment", class: "form-control mb-3", placeholder: "コメント", rows:"4" %>
+        <%= f.submit "送信する" %>
+       <% end %>
+ 
 	</div>
 </div>
 </div>
