--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,15 +1,26 @@
-<% if user_signed_in? %>
-  <% if book.favorited_by?(current_user) %>					
-		<%= link_to book_favorites_path(book.id), method: :delete, remote: true do %>
-			<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
-			<%= book.favorites.count %>
-		 <% end %>
-  <% else %>                   
+<td>
+			<%= link_to user_path(book.user.id) do %>
+				<%= attachment_image_tag book.user, :profile_image, format:'jpeg', size:"50x50", fallback: "no-image-mini.jpg" %>
+			<% end %>
+</td>
+<td>
+	    <%= link_to book.title, book, class: "book_#{book.id}" %>
+</td>
+
+<td><%= book.body %></td>
+
+<td><% if book.favorited_by?(current_user) %>					
+		  <%= link_to book_favorites_path(book.id), method: :delete, remote: true do %>
+			       <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
+			       <%= book.favorites.count %>
+		  <% end %>
+    <% else %>                   
 			<%= link_to book_favorites_path(book.id), method: :post, remote: true do %>
-		<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-			<%= book.favorites.count %>
+		         <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+			       <%= book.favorites.count %>
 	    <% end %>
   <% end %>
-<% end %>
+</td>
 
+<td><%= link_to "コメント数：#{book.book_comments.count}", book_path(book.id) %></td>
 
