--- a/app/views/favorites/_favorite2.html.erb
+++ b/app/views/favorites/_favorite2.html.erb
@@ -1,13 +1,38 @@
-<% if user_signed_in? %>
-  <% if book.favorited_by?(current_user) %>					
+        <td>
+		<%= link_to (@book.user) do %>
+		<%= attachment_image_tag(@book.user, :profile_image, size:"50x50", fallback: "no-image-mini.jpg") %><br>
+		<%= @book.user.name %>
+		<% end %>
+		</td>
+		<td><%= link_to @book.title, @book %></td>
+		<td><%= @book.body %></td>
+
+		<td>
+
+		<% if user_signed_in? %>
+		<% if book.favorited_by?(current_user) %>					
 		<%= link_to book_favorites_path(book.id), method: :delete, remote: true do %>
-			<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
-			<%= book.favorites.count %>
-		 <% end %>
-  <% else %>                   
-			<%= link_to book_favorites_path(book.id), method: :post, remote: true do %>
+		<span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></span>
+		<%= book.favorites.count %>
+		<% end %>
+		<% else %>                   
+		<%= link_to book_favorites_path(book.id), method: :post, remote: true do %>
 		<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-			<%= book.favorites.count %>
-	    <% end %>
-  <% end %>
-<% end %>
+		<%= book.favorites.count %>
+		<% end %>
+		<% end %>
+		<% end %>
+
+		</td>
+
+		<td>コメント数：<%= @book.book_comments.count %></td>
+		          <!--非同期通信追加-->
+
+					<% if @book.user_id == current_user.id %>
+
+					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
+					</td>
+					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>	
+					</td>
+				</tr>
+			  <% end %>
